--- a/templates/includes/_nav.html
+++ b/templates/includes/_nav.html
@@ -3,7 +3,7 @@
         <li><a href="/">StudReg</a></li>
     
         <li><a href="/">Home</a></li>
-        <li><a href="/create">DataBase</a></li>
+        <li><a href="https://iot-studentreg.firebaseio.com/">DataBase</a></li>
         {% if not session["usr"] %}
         <li><a href="/signup">SignUp</a></li>
         <li><a href="/login">Login</a></li>
